Add duplicate-student merge feature to the admin page