@@ -2,8 +2,10 @@ package org.tonique.vocal.student;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 import java.util.regex.Pattern;
 
@@ -30,6 +32,81 @@ public final class NameMatcher {
         String cleaned = DISALLOWED_CHARS.matcher(raw).replaceAll(" ");
         cleaned = WHITESPACE.matcher(cleaned).replaceAll(" ").trim();
         return cleaned.toLowerCase(UKRAINIAN);
+    }
+
+    /**
+     * True if two student names are the same person typed differently — either
+     * identical once normalized, or one is a substring of the other (handles a
+     * surname typed alone, or a missing patronymic). Used for duplicate-student
+     * detection, not payment matching, so unlike {@link #match} it doesn't reason
+     * about tokens/initials at all.
+     */
+    public static boolean isLikelyDuplicate(String fullNameA, String fullNameB) {
+        String a = normalize(fullNameA);
+        String b = normalize(fullNameB);
+        if (a.isBlank() || b.isBlank()) {
+            return false;
+        }
+        return a.equals(b) || a.contains(b) || b.contains(a);
+    }
+
+    /**
+     * Groups students whose names look like the same person (see {@link #isLikelyDuplicate}).
+     * Grouping is transitive (union-find), so a surname-only entry chains together with every
+     * fuller name containing it, even if those fuller names aren't themselves duplicates of
+     * each other (e.g. two siblings sharing a surname) — {@link #isClique} flags that case so
+     * callers can tell a "safe" group (everyone matches everyone) from a merely "connected" one
+     * that needs a human to look at it.
+     */
+    public static List<List<Student>> findDuplicateGroups(List<Student> students) {
+        int n = students.size();
+        int[] parent = new int[n];
+        for (int i = 0; i < n; i++) {
+            parent[i] = i;
+        }
+
+        for (int i = 0; i < n; i++) {
+            for (int j = i + 1; j < n; j++) {
+                if (isLikelyDuplicate(students.get(i).getFullName(), students.get(j).getFullName())) {
+                    union(parent, i, j);
+                }
+            }
+        }
+
+        Map<Integer, List<Student>> byRoot = new LinkedHashMap<>();
+        for (int i = 0; i < n; i++) {
+            byRoot.computeIfAbsent(find(parent, i), root -> new ArrayList<>()).add(students.get(i));
+        }
+
+        return byRoot.values().stream().filter(group -> group.size() > 1).toList();
+    }
+
+    /** True if every pair in the group directly matches — safe to merge without a human check. */
+    public static boolean isClique(List<Student> group) {
+        for (int i = 0; i < group.size(); i++) {
+            for (int j = i + 1; j < group.size(); j++) {
+                if (!isLikelyDuplicate(group.get(i).getFullName(), group.get(j).getFullName())) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+
+    private static int find(int[] parent, int i) {
+        while (parent[i] != i) {
+            parent[i] = parent[parent[i]];
+            i = parent[i];
+        }
+        return i;
+    }
+
+    private static void union(int[] parent, int a, int b) {
+        int rootA = find(parent, a);
+        int rootB = find(parent, b);
+        if (rootA != rootB) {
+            parent[rootA] = rootB;
+        }
     }
 
     public static MatchResult match(String parsedName, List<Student> roster) {
@@ -71,7 +148,7 @@ public final class NameMatcher {
     }
 
     private static List<Student> matchSurnameInitials(List<String> tokens, List<Student> roster) {
-        String surname = tokens.get(0);
+        String surname = tokens.getFirst();
         String rest = String.join(" ", tokens.subList(1, tokens.size()));
         List<Character> initials = extractInitials(rest);
         if (initials.isEmpty()) {
@@ -115,7 +192,7 @@ public final class NameMatcher {
     public record MatchResult(List<Student> candidates) {
 
         public Optional<Student> unique() {
-            return candidates.size() == 1 ? Optional.of(candidates.get(0)) : Optional.empty();
+            return candidates.size() == 1 ? Optional.of(candidates.getFirst()) : Optional.empty();
         }
     }
 }
